# devops-platform

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  main.py  pyproject.toml
services/auth-service/: Dockerfile  alembic.ini  pyproject.toml
services/auth-service/docker/: Dockerfile.dev
services/auth-service/src/auth_service/: app.py  config.py  ioc.py
services/auth-service/src/auth_service/application/: interfaces.py
services/auth-service/src/auth_service/application/dtos/: __init__.py
services/auth-service/src/auth_service/application/interactors/: get_github_token.py  get_user.py  github_oauth_login.py  logout.py  refresh_token.py
services/auth-service/src/auth_service/domain/: __init__.py  entities.py
services/auth-service/src/auth_service/infrastructure/: logging_producer.py
services/auth-service/src/auth_service/infrastructure/oauth/: base_oauth_provider.py  github_oauth_provider.py
services/auth-service/src/auth_service/infrastructure/redis/: session_repository.py
services/auth-service/src/auth_service/infrastructure/security/: jwt_service.py
services/auth-service/tests/: conftest.py
services/auth-service/tests/unit/: test_domain.py  test_get_user_interactor.py  test_jwt_service.py  test_logout_interactor.py  test_refresh_token_interactor.py
services/deployment-service/: .env.example  Dockerfile  alembic.ini  go.mod  go.sum  pyproject.toml
services/deployment-service/cmd/api/: main.go
services/deployment-service/docker/: Dockerfile  Dockerfile.dev
services/deployment-service/internal/app/port/: auth.go  messaging.go  nomad.go  repository.go  secrets.go
services/deployment-service/internal/app/usecase/command/: create_config.go  delete_project.go  deploy.go  job_params.go  retry.go  stop.go
services/deployment-service/internal/app/usecase/query/: get_deployment.go  get_logs.go  list_deployments.go
services/deployment-service/internal/config/: config.go
services/deployment-service/internal/domain/: config.go  config_test.go  deployment.go  deployment_test.go  errors.go
services/deployment-service/internal/infra/authclient/: client.go
services/deployment-service/internal/infra/kafka/: publisher.go
services/deployment-service/internal/infra/nomad/: client.go  job_builder.go
services/deployment-service/internal/infra/nomad/templates/: build_job.hcl.tmpl  deploy_job.hcl.tmpl
services/deployment-service/internal/infra/postgres/: repo_config.go  repo_deployment.go
services/deployment-service/internal/infra/secretsclient/: client.go
services/deployment-service/internal/metrics/: metrics.go
services/deployment-service/internal/transport/http/: server.go
services/deployment-service/internal/transport/http/dto/: deployment.go
services/deployment-service/internal/transport/http/handler/: deployment.go
services/deployment-service/internal/transport/http/middleware/: correlation_id.go
services/deployment-service/internal/transport/kafka/: consumer.go
services/deployment-service/migrations/: 001_init.sql  env.py
services/deployment-service/migrations/versions/: 20251206_0102_initial_schema.py  add_building_status.py  add_deployment_url.py  remove_env_variables.py
services/deployment-service/pkg/logger/: logger.go
services/deployment-service/src/deployment_service/: app.py  config.py  ioc.py
services/deployment-service/src/deployment_service/application/dtos/: __init__.py
services/deployment-service/src/deployment_service/application/interactors/: create_deployment.py  create_deployment_config.py  get_deployment.py  get_deployment_logs.py  handle_project_deleted.py  handle_secrets_bulk_created.py  list_deployments.py  retry_deployment.py  stop_deployment.py
services/deployment-service/src/deployment_service/application/interfaces/: __init__.py  deployment_executor.py
services/deployment-service/src/deployment_service/domain/: entities.py
services/deployment-service/src/deployment_service/infrastructure/: auth_service.py  logging.py  logging_producer.py
services/deployment-service/src/deployment_service/infrastructure/docker/: client.py  deployment_executor.py
services/deployment-service/src/deployment_service/infrastructure/github/: client.py
services/deployment-service/src/deployment_service/infrastructure/messaging/: broker.py  consumers.py  publisher.py
services/deployment-service/src/deployment_service/infrastructure/nomad/: client.py  job_generators.py
services/deployment-service/src/deployment_service/infrastructure/sqlalchemy/: database.py  deployment_config_repository.py  deployment_repository.py
services/project-service/: Dockerfile  pyproject.toml
services/project-service/docker/: Dockerfile.dev
services/project-service/migrations/: env.py
services/project-service/migrations/versions/: 19a8a188c953_add_project_orchestration_fields.py  add_deployment_url_projects.py
services/project-service/src/project_service/: app.py  config.py  ioc.py
services/project-service/src/project_service/application/: exceptions.py
services/project-service/src/project_service/application/dtos/: __init__.py
services/project-service/src/project_service/application/interactors/: analyze_repository.py  create_project.py  delete_project.py  get_project_status.py  (+8 more)
services/project-service/src/project_service/domain/: __init__.py  entities.py
services/project-service/src/project_service/infrastructure/: auth_service.py  deployment_service.py  github_service.py  logging_producer.py
services/project-service/tests/: conftest.py
services/project-service/tests/unit/: test_domain.py  test_get_project_status.py
services/secrets-service/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
services/secrets-service/docker/: Dockerfile.dev
services/secrets-service/src/secrets_service/: app.py  config.py  ioc.py
services/secrets-service/src/secrets_service/domain/: entities.py
services/secrets-service/src/secrets_service/infrastructure/: logging_producer.py
services/secrets-service/tests/unit/: test_create_secret.py  test_domain.py  test_get_secrets.py
(+154 files in other folders)
