[project]
name = "project-service"
version = "0.1.0"
description = "Project Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "dishka>=1.7.2",
    "fastapi>=0.118.0",
    "faststream[kafka]>=0.5.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "redis>=7.0.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "prometheus-fastapi-instrumentator>=0.11.0",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
warn_return_any = false
disable_error_code = ["prop-decorator"]
enable_error_code = ["truthy-bool", "unused-awaitable", "possibly-undefined"]

[[tool.mypy.overrides]]
module = [
    "project_service.application.interactors.create_project",
    "project_service.application.interactors.delete_project",
    "project_service.infrastructure.sqlalchemy.project_repository",
    "project_service.infrastructure.github_service",
]
ignore_errors = true

[tool.ruff]
src = ["src"]
target-version = "py312"
line-length = 140
fix = true
lint.select = [
    # Pyflakes
    "F",     # Pyflakes rules for logical errors

    # pycodestyle
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings

    # isort
    "I",     # Import sorting and organization

    # pep8-naming
    "N",     # PEP 8 naming conventions

    # pyupgrade
    "UP",    # Modern Python syntax upgrades

    # flake8-bugbear
    "B",     # Common bugs and design problems

    # flake8-simplify
    "SIM",   # Code simplification suggestions

    # flake8-comprehensions
    "C4",    # List/dict/set comprehension improvements

    # bandit (security)
    "S",     # Security vulnerability detection

    # flake8-annotations
    "ANN",   # Type annotation enforcement

    # flake8-async
    "ASYNC", # Async/await usage best practices

    # flake8-logging-format
    "G",     # Logging format and best practices

    # Pylint
    "PL",    # Pylint rules for code quality

    # Ruff-specific rules
    "RUF",   # Ruff-specific improvements
]
lint.ignore = [
    "D203", "D213", "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D",
    "ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204",
    "S104", "S105", "S106",
    "N811",
    "G004", "G201",
    "PLC0415",
    "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004", "PLW2901", "PLR1714",
    "ASYNC109",
    "F841",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "E501"]
"migrations/*.py" = ["ALL"]
